# rbac

./: .dockerignore  .env.example  .gitignore  MANIFEST.in  Makefile  README.md  build.bat  build.sh  build_and_upload.py  build_push.sh  database_state.txt  db_state.txt  docker-compose.yml  entrypoint.sh  fix_endpoint_mappings.py  gunicorn.conf.py  manifest.in  map_database.py  pyproject.toml  req.txt  requirements.txt  setup.py  simple_map.py  test_rbac.py  test_results.txt
accounts/: admin.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_tenant.py
core/: admin.py  conf.py  decorators.py  drf_exception_handler.py  exception_middleware.py  exceptions.py  managers.py  middleware.py  models.py  serializers.py  utils.py  views.py
core/api/: base.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_role_table.py  0002_seed_modules.py
core/services/: RBACMiddleware.py  permission_api_resolver.py  rbac.py  rules.py  sidebar_context.py
docker/: Dockerfile  docker-compose.local.yml  docker-compose.org.yml  docker-compose.yml
docs/: deployment.md
enquiry/: models.py  services.py  views.py
enquiry/api/: serializers.py  urls.py  views.py
enquiry/migrations/: 0001_initial.py  0002_enquiry_status.py  0003_alter_enquiry_options_and_more.py
enquiry/tests/: test_enquiry_lifecycle.py  test_enquiry_permissions.py
followup/: models.py  services.py  views.py
followup/api/: serializers.py  urls.py  views.py
followup/migrations/: 0001_initial.py  0002_followup_status.py  0003_alter_followup_options_followup_tenant_and_more.py  0004_backfill_tenant.py  0005_alter_followup_tenant.py
followup/tests/: test_followup_lifecycle.py  test_followup_permissions.py
msbc_rbac/accounts/: admin.py  (+4 more)
organization/: models.py  services.py  signals.py  views.py
quotation/: models.py  services.py  views.py
rbac_project/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: build-local.sh  build-org.sh  run-dev.sh
(+52 files in other folders)
